--- a/map2.html
+++ b/map2.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 <title>TitelderSeite</title>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-
+puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+crossorigin=""/>
+<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-
+nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+crossorigin=""></script>
 </head>
 <body>
 <h1>ÜberschriftderSeite</h1>
 <p>Paragraph-Zeile.</p>
+<div id="mapid" style="width: 600px; height: 400px; position: relative;">
+<script>
+var mymap = L.map().setView([0, 0]).setZoom(1);
+</script>
 </body>
 </html>
