--- a/map3.html
+++ b/map3.html
@@ -14,7 +14,9 @@ crossorigin=""></script>
 <p>Paragraph-Zeile.</p>
 <div id="mapid" style="width: 600px; height: 400px; position: relative;"></div>
 <script>
-var mymap = L.map().setView([0, 0]).setZoom(1);
+var mymap = L.map("mapid").setView([0, 0]).setZoom(1);
+var OSM_background =
+L.tileLayer('https://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png').addTo(mymap);
 </script>
 </body>
 </html>
