--- a/map3.html
+++ b/map3.html
@@ -14,9 +14,11 @@ crossorigin=""></script>
 <p>Paragraph-Zeile.</p>
 <div id="mapid" style="width: 600px; height: 400px; position: relative;"></div>
 <script>
-var mymap = L.map("mapid").setView([0, 0]).setZoom(1);
+var mymap = L.map("mapid").setView([ 48.5124,9.0556]).setZoom(14);
 var OSM_background =
 L.tileLayer('https://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png').addTo(mymap);
+var markBota = L.marker([48.523549, 9.057546]).addTo(mymap);
+markBota.bindPopup("<p>Botanischer Garten</p>");
 </script>
 </body>
 </html>
