--- a/map3.html
+++ b/map3.html
@@ -19,6 +19,7 @@ var OSM_background =
 L.tileLayer('https://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png').addTo(mymap);
 var markBota = L.marker([48.523549, 9.057546]).addTo(mymap);
 markBota.bindPopup("<p>Botanischer Garten</p>");
+var NASAGIBS_ViirsEarthAtNight2012 = L.tileLayer('https://map1.vis.earthdata.nasa.gov/wmts-webmerc/VIIRS_CityLights_2012/default/{time}/{tilematrixset}{maxZoom}/{z}/{y}/{x}.png')addTo(mymap)
 </script>
 </body>
 </html>
