--- a/map3.html
+++ b/map3.html
@@ -17,9 +17,12 @@ crossorigin=""></script>
 var mymap = L.map("mapid").setView([ 48.5124,9.0556]).setZoom(14);
 var OSM_background =
 L.tileLayer('https://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png').addTo(mymap);
-var markBota = L.marker([48.523549, 9.057546]).addTo(mymap);
-markBota.bindPopup("<p>Botanischer Garten</p>");
-var NASAGIBS_ViirsEarthAtNight2012 = L.tileLayer('https://map1.vis.earthdata.nasa.gov/wmts-webmerc/VIIRS_CityLights_2012/default/{time}/{tilematrixset}{maxZoom}/{z}/{y}/{x}.png')addTo(mymap)
+var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}.png').addTo(mymap);
+var basemaps = {
+	"OSM": OSM_background,
+	"Luftbild": Esri_WorldImagery
+};
+var legend = L.control.layers(basemaps, null,{}).addTo(mymap);
 </script>
 </body>
 </html>
