--- a/mymap_empty.html
+++ b/mymap_empty.html
@@ -38,7 +38,7 @@
 	
 	// Add basemaps
 	// basemap 1:
-	var osm_basemap = L.tileLayer('https://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png', {
+	var osm_basemap = L.tileLayer('https://map1.vis.earthdata.nasa.gov/wmts-webmerc/VIIRS_CityLights_2012/default/{time}/{tilematrixset}{maxZoom}/{z}/{y}/{x}.{png}', {
 		attribution: '<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	}).addTo(mymap);
 	
