--- a/map3.html
+++ b/map3.html
@@ -22,7 +22,7 @@ var basemaps = {
 	"OSM": OSM_background,
 	"Luftbild": Esri_WorldImagery
 };
-var legend = L.control.layers(basemaps, null,{}).addTo(mymap);
+var legend = L.control.layers(basemaps, null,{position:"topleft"}).addTo(mymap);
 </script>
 </body>
 </html>
